# drf_tweaks

./: .pre-commit-config.yaml  CHANGELOG.md  README.rst  pyproject.toml  runtests.py  setup.py
.github/workflows/: codeql-analysis.yml
drf_tweaks/: autodoc.py  autofilter.py  fields.py  mixins.py  optimizator.py  pagination.py  serializers.py  versioning.py
drf_tweaks/test_utils/: __init__.py  lock_limiter.py  query_counter.py
tests/: conftest.py  models.py  test_autodoc.py  test_autofilter.py  test_autooptimization.py  test_autooptimizer.py  test_bulk_edit.py  test_lock_limiter.py  test_pagination.py  test_query_counting.py  test_serializers.py  test_serializers_context_passing.py  test_versioning.py
